fix spacing between team

--- a/src/pages/About/Team.css
+++ b/src/pages/About/Team.css
@@ -98,4 +98,22 @@
     .slider p{
         font-size: 12px;
     }
+    .alex{
+        padding-bottom: 20px;
+    }
+    .alex-h3{
+        padding-bottom: 36px;
+    }
+    .noel-h3{
+        padding-bottom: 22px;
+    }
+    .pranay{
+        padding-bottom: 20px;
+    }
+    .elena{
+        padding-bottom: 20px;
+    }
+    .michaela{
+        padding-bottom: 20px;
+    }
 }
